fix bugs for search and inputs classes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             id="searchInput"
             class="w-100 form-control mb-3 border border-primary"
             placeholder="search..."
-            onkeyup="search()"
+            oninput="search()"
           />
         </div>
 
